<resources>
    <string name="app_name">U3_STUDENT_MIGUEL</string>

    <string name="action_settings">Settings</string>
    <string name="text_clear"> Clear </string>
    <string name="text_button"> Add / Clear</string>
    <string name="text_label"> Here is where you will see the text that you type</string>
    <string name="text_hint"> Type some text and press the button</string>
    <string name="text_red"> Red</string>
    <string name="text_blue"> Blue</string>
    <string name="text_start"> Start</string>
    <string name="text_stop"> Stop</string>
    <string name="text_image"> Ria de Vigo - Pontevedra</string>
    <string name="text_toast_gal"> You have selected a Galician province</string>
    <string name="text_toast_no_gal"> You have not selected a Galician Province</string>
    <string name="text_toast_no_text"> Please, make a selection</string>

    <string name="img_description"> Picture of Ria de Vigo</string>
</resources>